test/langtools/tools/javac/SuperInit/EarlyAssignments.out
EarlyAssignments.java:20:17: compiler.err.cant.ref.before.ctor.called: x
EarlyAssignments.java:21:17: compiler.err.cant.ref.before.ctor.called: this
EarlyAssignments.java:22:23: compiler.err.cant.ref.before.ctor.called: this
EarlyAssignments.java:30:21: compiler.err.cant.ref.before.ctor.called: super
EarlyAssignments.java:31:21: compiler.err.cant.ref.before.ctor.called: x
EarlyAssignments.java:32:26: compiler.err.cant.ref.before.ctor.called: x
EarlyAssignments.java:33:34: compiler.err.cant.ref.before.ctor.called: x
EarlyAssignments.java:35:36: compiler.err.cant.ref.before.ctor.called: this
EarlyAssignments.java:39:17: compiler.err.cant.ref.before.ctor.called: x
EarlyAssignments.java:43:21: compiler.err.cant.ref.before.ctor.called: x
EarlyAssignments.java:47:22: compiler.err.cant.ref.before.ctor.called: x
EarlyAssignments.java:65:13: compiler.err.cant.ref.before.ctor.called: x
EarlyAssignments.java:66:17: compiler.err.cant.ref.before.ctor.called: x
EarlyAssignments.java:67:25: compiler.err.cant.ref.before.ctor.called: this
EarlyAssignments.java:68:31: compiler.err.cant.ref.before.ctor.called: this
EarlyAssignments.java:97:17: compiler.err.cant.ref.before.ctor.called: x
EarlyAssignments.java:103:22: compiler.err.cant.ref.before.ctor.called: this
EarlyAssignments.java:109:35: compiler.err.cant.ref.before.ctor.called: this
EarlyAssignments.java:118:17: compiler.err.cant.ref.before.ctor.called: x
EarlyAssignments.java:123:22: compiler.err.cant.ref.before.ctor.called: x
EarlyAssignments.java:128:29: compiler.err.cant.ref.before.ctor.called: x
EarlyAssignments.java:133:17: compiler.err.cant.ref.before.ctor.called: super
EarlyAssignments.java:138:23: compiler.err.cant.ref.before.ctor.called: this
EarlyAssignments.java:147:13: compiler.err.cant.assign.initialized.before.ctor.called: x
EarlyAssignments.java:156:13: compiler.err.cant.assign.val.to.var: final, x
EarlyAssignments.java:167:13: compiler.err.cant.ref.before.ctor.called: this
26 errors
